@@ -6,6 +6,7 @@ Revision history for Net-Silverpeak-Orchestrator
     - skip appliance tests if Orchestrator has none assigned
     - add create_templategroup method
     - add update_templates_of_templategroup method
+    - add delete_templategroup method
 
 0.001002  2021-02-19 07:35:30+01:00 Europe/Vienna
     - fix Data::Dumper::Concise usage in t/api.t
